--- a/KleynGroup/KleynGroup/KleynGroup.Android/KleynGroup.Android.csproj
+++ b/KleynGroup/KleynGroup/KleynGroup.Android/KleynGroup.Android.csproj
@@ -32,7 +32,9 @@
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
     <AndroidSupportedAbis />
-    <JavaMaximumHeapSize />
+    <JavaMaximumHeapSize>
+    </JavaMaximumHeapSize>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,6 +45,12 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <BundleAssemblies>false</BundleAssemblies>
+    <AndroidLinkMode>Full</AndroidLinkMode>
+    <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    <AndroidLinkSkip>SQLite-net;SQLitePCLRaw.batteries_v2;SQLitePCLRaw.core</AndroidLinkSkip>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
@@ -52,17 +60,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Core.Google.GData.Extensions">
+      <Version>1.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Core.Google.Gdata.YouTube">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Google.Apis">
-      <Version>1.32.2</Version>
+      <Version>1.34.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.YouTube.v3">
-      <Version>1.32.2.1198</Version>
+      <Version>1.34.0.1226</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Gdata.Client.Core">
+      <Version>1.0.2</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>11.0.1</Version>
+      <Version>11.0.2</Version>
     </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
-      <Version>1.0.1</Version>
+      <Version>2.1.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="Scorchio.NinjaCoder.Xamarin.Forms.Labs">
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.4.118</Version>
@@ -73,17 +93,20 @@
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
+    <PackageReference Include="TK.CustomMap">
+      <Version>2.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Geolocator">
-      <Version>4.2.0</Version>
+      <Version>4.5.0.6</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
-      <Version>3.1.3</Version>
+      <Version>4.0.0.9</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugins.Vibrate">
-      <Version>3.0.1</Version>
+      <Version>4.0.0.5</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="25.4.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="25.4.0.2" />
@@ -93,17 +116,14 @@
     <PackageReference Include="Xamarin.Auth">
       <Version>1.6.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
-      <Version>2.3.6</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.0.0.446417</Version>
+      <Version>3.0.0.482510</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.GoogleMaps">
       <Version>2.3.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.Maps">
-      <Version>2.5.1.444934</Version>
+      <Version>3.0.0.446417</Version>
     </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile.Forms">
       <Version>2.3.2</Version>
@@ -116,6 +136,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\client_secret_924710780360-lpfpvg2csvit4dkumt98p9iugdh2tsl8.apps.googleusercontent.com.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
