--- a/KleynGroup/KleynGroup/KleynGroup.iOS/KleynGroup.iOS.csproj
+++ b/KleynGroup/KleynGroup/KleynGroup.iOS/KleynGroup.iOS.csproj
@@ -120,14 +120,26 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Core.Google.GData.Extensions">
+      <Version>1.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Core.Google.Gdata.YouTube">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Google.Apis">
-      <Version>1.33.0</Version>
+      <Version>1.34.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.YouTube.v3">
-      <Version>1.33.0.1217</Version>
+      <Version>1.34.0.1226</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Gdata.Client.Core">
+      <Version>1.0.2</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Scorchio.NinjaCoder.Xamarin.Forms.Labs">
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.4.118</Version>
@@ -138,26 +150,26 @@
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
+    <PackageReference Include="TK.CustomMap">
+      <Version>2.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Geolocator">
-      <Version>4.5.0.1</Version>
+      <Version>4.5.0.6</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
-      <Version>3.2.1</Version>
+      <Version>4.0.0.9</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugins.Vibrate">
-      <Version>3.0.1</Version>
+      <Version>4.0.0.5</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Auth">
       <Version>1.6.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
-      <Version>2.3.6</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.0.0.446417</Version>
+      <Version>3.0.0.482510</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.GoogleMaps">
       <Version>2.3.0</Version>
@@ -166,7 +178,7 @@
       <Version>3.0.0.446417</Version>
     </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile.Forms">
-      <Version>2.4.1</Version>
+      <Version>2.3.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
